# gen_mailer

./: Cargo.toml  README.md
.github/workflows/: check.yaml  publish.yaml  run-checks.yaml
src/: address.rs  generic_mailer.rs  lib.rs  mailer.rs  message.rs  utils.rs
src/mailers/: aws_ses.rs  console.rs  mailtrap.rs  mod.rs  no_op.rs  noop.rs  sendgrid.rs
