[package]
name = "gen_mailer"
version = "0.1.0"
edition = "2024"

[lints.clippy]
needless_return = "allow"

[features]
default = []
sendgrid = ["__reqwest", "dep:serde", "dep:serde_json"]
__reqwest = ["dep:reqwest"]

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# [dev-dependencies]
# tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
