[package]
name = "gen_mailer"
description = "A generic mailer for Rust"
license = "Zlib"
repository = "https://github.com/lezgomatt/gen_mailer"

version = "0.1.0"
edition = "2024"

[lints.clippy]
needless_return = "allow"

[features]
default = []
aws_ses = ["dep:aws-sdk-sesv2"]
mailtrap = ["__reqwest", "dep:serde", "dep:serde_json"]
sendgrid = ["__reqwest", "dep:serde", "dep:serde_json"]
__reqwest = ["dep:reqwest"]

[dependencies]
async-trait = "0.1"
aws-sdk-sesv2 = { version = "1.27", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

# [dev-dependencies]
# tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
